* The base64 encoder used an invalid encoding for the last unit of data if
  (bytes_of_input % 3 == 2); it wrote two encoded bits beyond the last byte
  then. Most base64 decoders, including nail's own, ignore such bits since
  base64 data is always a multiple of 8-bit bytes. This might explain why
  no harm caused by this error has been found for years. (Bug reported by
  Lukasz Iwaszkiewicz).
* Wildcard host names in certificates according to RFC 2595 are now accepted
  (Bug reported by Svend Sorensen).
* Since RFC 2595 allows wildcards at other places than RFC 2818 which is
  implemented by Mozilla NSS, host name verification is now done separately.
* The "sort xyz" commands now uncollapse all threads of a previously threaded
  folder view; messages in collapsed threads were previously not shown when
  the folder was sorted.
* The junk mail filter now also ignores the "X-pstn" header fields generated
  by "postini" filtering software.

[11.24] released 7/14/05
* When the 'replyto' variable was set, sending a message resulted in a
  segmentation fault due to a NULL pointer dereference (Bug reported by
  Nick Pasich).
* An 'imap-list-depth' variable was introduced to control the maximum depth
  of the folder traversal for the 'folders' command if the folder separator
  on the IMAP server is not the slash '/'.
* If standard output is not a terminal device, the output of the 'folders'
  command applied to an IMAP account is no longer arranged into columns.
* The new '-R' option causes all folders to be opened read-only.
* When the From address was changed with '~H', the value obtained from the
  'from' variable was still used for the SMTP transfer, for generating the
  Message-Id, and for S/MIME signing. This has been fixed; the changed
  address is now used throughout.
* When reading header fields from a terminal, the input buffer could
  overflow by one byte (Patch by Ulf Harnhammar).
* Only applicable if Mozilla NSS is used for SSL support: If the certificate